# quote-project

./: .env  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_scraper.py
.github/workflows/: auto-assign.yml
app/: main.py
app/api/v1/: auth.py  diary.py  question.py  quote.py  users.py
app/core/: config.py  db.py  dependencies.py  deps.py  security.py
app/db/: config.py  database.py  session.py
app/db/migrations/models/: 1_20250910113308_None.py
app/models/: __init__.py  diary.py  question.py  quote.py  token.py  user.py
app/repositories/: question_repo.py
app/schemas/: auth.py  base.py  diary.py  question.py  quote.py  user.py
app/scraping/: question_data.py  question_scraper.py  quote_scraper.py  scrape_data.py
app/services/: auth.py  question_service.py
docs/: CONTRIBUTORS.md
migrations/models/: 0_20250909105221_init.py
